changed items to class instead of enum